app/src/parser/transactions/pvm/banff/snapshots/rslib__parser__transactions__pvm__banff__add_permissionless_delegator__tests__ui_permissionless_delegator-3.snap
---
source: app/src/parser/transactions/pvm/banff/add_permissionless_delegator.rs
expression: reduced
---
[
    "AddPermlessDelega": "Transaction",
    "Validator": "NodeID-2ZbTY9GatRTrfinAoYiYLcf6CvrPAUYgo",
    "SubnetID": "SkB92YpWm4UpburLz9tEKZw2i67H3FF6YkjaU4BkFUDTG9Xm",
    "Start time": "1970-01-01 03:25:45 UTC",
    "End time": "1970-01-01 03:25:46 UTC",
    "Stake(METAL)": "0.000000001",
    "Stake": "0.000000001 METAL to ",
    "Address": "metal1g32kvaugnx4tk3z4vemc3xd2hdz92enhqaj6ex",
    "Rewards to": "metal1g32kvaugnx4tk3z4vemc3xd2hdz92enhqaj6ex",
    "Fee(METAL)": "0.001",
]
